monitoring/alertmanager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: monitoring
  name: alertmanager
  labels:
    app: alertmanager
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      hostNetwork: true
      containers:
        - name: alertmanager
          image: index.docker.io/mmoriarity/alertmanager:latest
          command:
            - /detect-presence-srv
            - -db=/data/presence.db
          ports:
            - containerPort: 9093
              hostPort: 9093
          volumeMounts:
            - name: alertmanager-data
              mountPath: /alertmanager
      volumes:
        - name: alertmanager-data
          emptyDir: {}
