monitoring/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: alertmanager
spec:
  selector:
    app: alertmanager
  ports:
    - port: 80
      targetPort: http
