monitoring/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: alertmanager
spec:
  rules:
    - host: alertmanager
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 80
